# kleio_rs

./: Cargo.toml  README.md
examples/: compile_local_data.rs  export_sample_packs.rs  export_sample_timeline_document.rs  import_event_pack.rs  timeline_repository_smoke.rs  (+1 more)
examples/local_authoring_explorer/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
examples/local_authoring_explorer/data/: kleio.toml
examples/local_authoring_explorer/data/worlds/default/: world.toml
examples/local_authoring_explorer/data/worlds/default/assertions/: alex-example-name.md
examples/local_authoring_explorer/data/worlds/default/collections/: example-life-events.toml
examples/local_authoring_explorer/data/worlds/default/entities/people/: alex-example.md  morgan-example.md
examples/local_authoring_explorer/data/worlds/default/entities/places/: example-town.md
examples/local_authoring_explorer/data/worlds/default/events/births/: birth-alex-example.md  birth-morgan-example.md
examples/local_authoring_explorer/data/worlds/default/events/residences/: alex-example-residence.md
examples/local_authoring_explorer/data/worlds/default/relationships/: alex-morgan-example.toml
examples/local_authoring_explorer/data/worlds/default/sources/: example-notebook.md
examples/local_authoring_explorer/data/worlds/default/views/timelines/: example-life.toml
examples/local_authoring_explorer/data/worlds/default/views/trees/: main-family-tree.toml
examples/local_authoring_explorer/scripts/: build_local_data.sh
examples/local_authoring_explorer/src/: main.rs
src/: archive.rs  (+29 more)
(+31 files in other folders)
