[package]
name = "kleio"
version = "0.1.0"
edition = "2024"
exclude = [
    "vendor/",
    "*.nt",
    "*.nt.bz2",
]

[lib]
path = "src/lib.rs"

[features]
default = []
gedcom = ["dep:ged_io"]
sqlite = [
    "dep:rusqlite",
    "dep:sha2",
    "dep:thiserror",
    "dep:time",
    "dep:uuid",
]

[dependencies]
ged_io = { version = "0.14.5", features = ["json"], optional = true }
rkyv = "0.8.16"
rusqlite = { version = "0.37", features = ["bundled"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = { version = "0.10", optional = true }
thiserror = { version = "2", optional = true }
time = { version = "0.3", features = ["formatting"], optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }

[dev-dependencies]
bzip2 = "0.5"
