[workspace]

[package]
name = "kleio_local_authoring_explorer"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

web-sys = { version = "0.3", features = [
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "HtmlElement",
  "HtmlInputElement",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "console",
] }
